<resources>
    <string name="app_name">Logix</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <string name="login">Login</string>
    <string name="username">                Username</string>
    <string name="password">                Password</string>
    <string name="sign_in">                 Sign In</string>
    <string name="please_sign_in_again">    Sign In again</string>
    <string name="forget_pw">               Forgot Password</string>
    <string name="register">               Register</string>
    <string name="please_enter_username_and_pw">Please enter username and password</string>
    <string name="please_type_username">    Please Enter Your Username.</string>
    <string name="please_type_password">    Please Enter Your Password.</string>
    <string name="please_type_password_again">    Please Enter Password Again.</string>
    <string name="please_type_email">       Please Enter Your Email</string>
    <string name="please_type_full_name">       Please Enter Your Full Name</string>
    <string name="please_enter_valid_email">       Please Enter a Valid Email.</string>
    <string name="email_min_length">     Email Should Have More Than 3 Characters.</string>
    <string name="is_logged_in">logged_in</string>
    <string name="settings_prefs">settingsPrefs</string>
    <string name="user_prefs">userPrefs</string>
    <string name="welcome_to_logix">          Welcome to the Logix</string>
    <string name="check_internet">          Please Check Your Internet Connection.</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="user_type">User type</string>
    <string name="title_activity_freight_forwarder_maps_v2">Map</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
</resources>
