<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/btnSearch"
        app:layout_constraintStart_toStartOf="@+id/btnSearch"
        android:focusableInTouchMode="true">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputFullName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:minWidth="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:focusedByDefault="false"
                tools:ignore="UnusedAttribute" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:minWidth="20dp"
            app:layout_constraintEnd_toEndOf="@+id/textInputFullName"
            app:layout_constraintStart_toStartOf="@+id/textInputFullName"
            app:layout_constraintTop_toBottomOf="@+id/textInputFullName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                tools:ignore="UnusedAttribute" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:minWidth="20dp"
            app:layout_constraintEnd_toEndOf="@+id/textInputEmail"
            app:layout_constraintStart_toStartOf="@+id/textInputEmail"
            app:layout_constraintTop_toBottomOf="@+id/textInputEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                tools:ignore="UnusedAttribute" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputConfirmPw"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:minWidth="20dp"
            app:layout_constraintEnd_toEndOf="@+id/textInputPassword"
            app:layout_constraintStart_toStartOf="@+id/textInputPassword"
            app:layout_constraintTop_toBottomOf="@+id/textInputPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etConfirmPw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                tools:ignore="UnusedAttribute" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/btnRegister"
            app:layout_constraintStart_toStartOf="@+id/btnRegister"
            app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="@+id/textInputConfirmPw"
            app:layout_constraintTop_toBottomOf="@+id/textInputConfirmPw" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>