<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBarLogin"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:indeterminate="true" />

        <TableRow
            android:id="@+id/tableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f2f2f2"
            android:gravity="center"
            android:layout_below="@+id/progressBarLogin"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <ImageView
                android:id="@+id/image_banner"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_below="@+id/progressBarLogin"
                android:background="@drawable/rounded_corner"
                android:scaleType="fitXY"
                android:src="@drawable/delivery"
                tools:ignore="ContentDescription" />
        </TableRow>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tableRow"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="41dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/helveticaneueltstd_roman"
            android:text="@string/login"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="?android:attr/listDivider"
            android:layout_below="@+id/textView4"/>

        <TableRow
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/baseline_account_circle_black_36"
                android:layout_weight="7"
                android:layout_gravity="center"
                tools:ignore="ContentDescription" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutUsername"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusableInTouchMode="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    tools:ignore="UnusedAttribute" />

            </com.google.android.material.textfield.TextInputLayout>

        </TableRow>

        <TableRow
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/row1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/baseline_lock_black_36"
                android:layout_weight="7"
                android:layout_gravity="center"
                tools:ignore="ContentDescription" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPw"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword|textNoSuggestions"/>

            </com.google.android.material.textfield.TextInputLayout>

        </TableRow>

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/row2"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:text="@string/register"
            android:textStyle="italic"
            tools:ignore="RtlHardcoded" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignIn"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:onClick="onClickBtnLogin"
            android:text="@string/sign_in"
            android:layout_below="@+id/tvRegister"
            android:layout_alignParentRight="true"
            tools:ignore="RtlHardcoded" />

        <CheckBox
            android:id="@+id/cbKeepSignedIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/row2"
            android:layout_alignStart="@+id/row2"
            android:layout_marginTop="10dp"
            android:text="Keep me signed in" />

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>
